# TicketSystem2022

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  run.sh  run_judge.py  t
app/: Cour.py  clear.sh  index.html  login.html  server.py  server2.py  server3.py  sv  test.cpp  test.py  user-index.html  webserver.py
app/static/css/: style.css  theme.css
app/templates/: guide.html  index.html  login.html  user-index.html
app/templates/admin/: add-train.html  add-user.html  clean.html  delete-train.html  index.html  login.html  modify-profile.html  query-user.html  release-train.html  rollback.html
app/templates/user/: buy-ticket.html  index.html  query-order.html  query-ticket.html  query-train.html  refund-ticket.html
docs/: design.md  web_front_end_design.md
lib/: BPlusTree.h  BackUp.h  FirVector.h  MemoryPool.h  TokenScanner.h  cached_bptree.h  datetime.cpp  datetime.h  exception.h  hashmap.h  str.h  time.cpp  time.h  utility.h  vector.h
src/: main.cpp  ticketsystem.cpp  ticketsystem.h  train.cpp  train.h  transaction.cpp  transaction.h  user.cpp  user.h
